# interval_dict

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: CMakeLists.txt  api.rst  api_bi_icl.rst  api_bi_intervaldict.rst  api_bi_intervaldict_func.rst  api_gregorian.rst  api_icl.rst  api_icl_interval_map_adaptor.rst  api_interval_traits.rst  api_intervaldict.rst  api_intervaldict_func.rst  api_ptime.rst  api_rebase_implementation.rst  build.py  conf.py  contents.rst  design.rst  index.rst
examples/: CMakeLists.txt  simple.cpp  simple_bi.cpp  simple_bi_exp.cpp  simple_bi_icl.cpp  simple_bi_iclexp.cpp  simple_exp.cpp  simple_icl.cpp  simple_iclexp.cpp
include/interval_dict/: adaptor.h  adaptor_ail.h  adaptor_icl_interval_map.h  adaptor_interval_tree.h  adaptor_traits.h  augmented_interval_list.h  bi_intervaldict.h  bi_intervaldict_forward.h  bi_intervaldictail.h  bi_intervaldicticl.h  bi_intervaldictitree.h  config.h.in  default_init_allocator.h  disjoint_adaptor.h  gregorian.h  icl_interval_map_adaptor.h  interval_compare.h  interval_operators.h  interval_overlaps.h  interval_traits.h  interval_tree.h  intervaldict.h  intervaldict_forward.h  intervaldict_func.h  intervaldictail.h  intervaldicticl.h  intervaldictitree.h  intervaltree.h  non_disjoint.h  ptime.h  rebase_implementation.h  std_ranges_23_patch.h  value_interval.h  ygg_interval_tree.h  ygg_interval_tree_adaptor.h
include/interval_dict/archive/: intervaldicticl.h  intervaldicticl_forward.h  intervaldicticl_func.h
tests/: CMakeLists.txt  print_set.h  print_tuple.h  print_vector.h  test_data.h  test_data2.h  test_disjoint_intervals.cpp  test_erase.cpp  test_fill.cpp  test_find.cpp  test_flatten.cpp  test_icl.h  test_icl_disjoint_intervals.cpp  test_icl_erase.cpp  test_icl_fill.cpp  test_icl_find.cpp  test_icl_flatten.cpp  test_icl_insert.cpp  test_icl_intervals.cpp  test_icl_join.cpp  test_icl_member_functions.cpp  test_icl_merge_subtract.cpp  test_icl_subset.cpp  test_insert.cpp  test_interval_overlaps.cpp  test_intervaldict.cpp  test_intervals.cpp  test_inverse_find.cpp  test_inverse_member_functions.cpp  test_join.cpp  test_member_functions.cpp  test_merge_subtract.cpp  test_ostream.cpp  test_simple.cpp  test_subset.cpp  test_utils.h  tuple_print.h
tests/test_bi_interval_dict_ail/: CMakeLists.txt
tests/test_bi_interval_dict_icl/: CMakeLists.txt
tests/test_bi_interval_dict_itree/: CMakeLists.txt
tests/test_general/: CMakeLists.txt
tests/test_interval_dict_ail/: CMakeLists.txt
tests/test_interval_dict_icl/: CMakeLists.txt
tests/test_interval_dict_itree/: CMakeLists.txt
tests/test_simple/: CMakeLists.txt
